--- a/config.yml
+++ b/config.yml
@@ -9,7 +9,7 @@ template:
 before:
   - type: createIssue
     title: Welcome!
-    body: new-issue.md
+    body: welcome.md
 steps:
   - title: First step
     description: The first step in your course
